--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,9 @@ name: Daily News Update
 
 on:
   schedule:
-    # IMPORTANT: Runs every 3 hours (e.g., at 00:00, 03:00, 06:00 UTC).
-    # This keeps the news fresh throughout the day while staying
-    # well within the free API limits.
-    - cron: '0 */3 * * *'
+    # Runs every 4 hours. This keeps news fresh and uses API credits efficiently.
+    # (6 calls/day for GNews, 6 calls/day for NewsData.io which is 60 credits)
+    - cron: '0 */4 * * *'
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -16,7 +15,6 @@ jobs:
   update-news:
     runs-on: ubuntu-latest
     
-    # Gives the Action permission to write the news.json file to the repository.
     permissions:
       contents: write
 
@@ -34,15 +32,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
 
-      - name: Fetch latest news
-        run: python news_fetcher.py --api-key ${{ secrets.NEWS_API_KEY }}
+      # Updated Step: Run the script with BOTH API keys
+      - name: Fetch latest news from all sources
+        run: python news_fetcher.py --gnews-key ${{ secrets.GNEWS_API_KEY }} --newsdata-key ${{ secrets.NEWSDATA_API_KEY }}
 
       - name: "Commit and push changes"
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "📰 Automated news update"
+          commit_message: "📰 Automated news update from multiple sources"
           file_pattern: 'news.json'
           commit_user_name: "Automated News Bot"
           commit_user_email: "actions@github.com"
           commit_author: "Automated News Bot <actions@github.com>"
-
