--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   schedule:
     # Runs every 4 hours. This keeps news fresh and uses API credits efficiently.
     # (6 calls/day for GNews, 6 calls/day for NewsData.io which is 60 credits)
-    - cron: '0 */4 * * *'
+    - cron: '0 * * * *'
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
